24 May 2018
fix: errors in log_viewer.php
update: use PASSWORD_BCRYPT for php versions prior to 7.2.0

23 May 2018
add: limit to number of cleanup scripts processed each run
update: increase karma achievement to start at 250, users start with 200
fix: undefinded lang in cleanup
update: clear default cache during install
fix: dissallow cleanup scripts to run before installation completed
fix: typo in adduser.php
fix: count in forum_posts.php

16 May 2018
fix: topics view increment
update: dependencies
update: replace password_hash algorithm bcrypt with argon2i, this only effects new or updated passwords,
        all previous password will continue to use bcrypt until password is updated

13 May 2018
update: move check for width/height to after if proxy url exists
remove: image proxy default url
update: enable latest forum posts on index page

12 May 2018
request: allow any alphanumeric character in username #4
update: require all new users or change username to use function valid_username

11 May 2018
update: cleanup process runs in perpetuity once started
fix: incorrect implementation of autoclean perpetuity

10 May 2018
update: cleanup process select all scripts that need processing instead of just 1

9 May 2018
fix: format_username in pm_system

19 Apr 2018
fix: fully revert navvbar changes
fix: README typo #3
fix: newest user block shows user id instead of formatted user name #1
fix: site stats not populating
fix: call getUserFromId() with array instead of id

18 Apr 2018
update: README
fix: incorrect var for users id
update: cookie lifetime to 1 as default
fix: site not working without redis installed and used as php session handler

17 Apr 2018
update: README
4 Mar 2018
update: composer.json require php extensions

3 Mar 2018
update: README, removed test sites
update: db files
add: stock forums(mostly done, but not happy with it)
add: cache insert/update AJAX Chat user online, only hit db once per 60 sec per user